--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
@@ -43,19 +45,22 @@
             </div>
         </nav>
     </header>
-
-        <div class="hero">
-            <div class="hero-text">
-              <h1>Track the FLOW... </h1>
+<!--Hero section-->
+<div class="hero">
+        <div class="hero-text">
+          <h1>Welcome to M care !!!</h1>
+        </div>
+        <div class="hero-buttons">
+          <a href="#more-info" class="btn-get-info">Get More Info</a>
+          <a href="appointment.html" class="btn-appointment">Book an Appointment</a>
+          <a href="https://www.youtube.com/watch?v=ekr2nIex040&ab_channel=ROS%C3%89" target="_blank" class="play-container">
+            <div class="btn-play">
+              <ion-icon name="play"></ion-icon>
             </div>
-            <div class="hero-buttons">
-              <a href="#more-info" class="btn-get-info">Get More Info</a>
-              <a href="appointment.html" class="btn-appointment">Book an Appointment</a>
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn-play" target="_blank">
-                <i class="fas fa-play play-icon"></i> Watch Video
-              </a>
-            </div>
-          </div>
+            <div class="how-we-work-text">How we Work?</div>
+          </a>
+        </div>
+      </div>
           <!--Part 2 Started-->
           <div class="scrolling-header">
             <div class="scrolling-container">
